# understading_auxilliary_tasks

./: .gitignore  LICENSE  README.md  pyproject.toml  requirement.txt  setup.py
aux_tasks/: __init__.py  main.py  rl_types.py  trainers.py
aux_tasks/agents/: actor_updates.py  agent_config.py  critic_updates.py  model_factory.py  model_updates.py  update_function.py
aux_tasks/data/: __init__.py  env.py  replay_buffer.py
aux_tasks/model_utils/: loss_functions.py  model_rollout.py
aux_tasks/nn/: actor.py  common.py  critic.py  model.py
aux_tasks/tests/: conv_deconv_test.py  flax_inheritance.py  flax_jit.py  flax_variables.py  gymnax_test.py  init_comparison.py  jax_func.py  minatar_test.py  rollout.py
aux_tasks/utils/: checkpointing.py  jax.py  logging.py
config/: main.yaml  minatar.yaml  minatar2.yaml
config/algo/: test.yaml
config/env/: dmc.yaml  dmc_distorted.yaml  dmc_noise.yaml  minatar.yaml  minatar_distorted.yaml  minatar_random_data.yaml  minatar_random_noise.yaml
config/logger/: claas.yaml
config/models/actor/: tdmpc.yaml  tdmpc2.yaml  viper.yaml
config/models/critic/: discrete_viper.yaml  dqn_viper.yaml  tdmpc.yaml  tdmpc2.yaml  viper.yaml
config/models/decoder/: conv_viper.yaml  viper.yaml
config/models/encoder/: conv_viper.yaml  tdmpc.yaml  tdmpc2.yaml  tdmpc2_variant.yaml  viper.yaml
config/models/latent_model/: tdmpc.yaml  tdmpc2.yaml  tdmpc2_variant.yaml  test.yaml  viper.yaml
config/train/: test.yaml
scripts/: correlation_analysis.py  correlation_analysis_minatar.py
scripts/model_free/minatar/: check_number_runs.py  (+12 more)
(+11 files in other folders)
